--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,11 @@
     height: 48px;
     width: 159px;
     border-radius: 10px;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+.btn-green:hover{
+    background-color: #256c3f;
 }
 
 
