revisando aula para alinhamento do main

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,8 +4,9 @@
 
     --cor-proclean-green: #36B864; /*Isto é uma variavel*/
     --cor-proclean-white: #ffffff; 
-    --cor-proclean-grey:  #4D4D4D; 
-    --cor--proclean--lil: #000000; 
+    --cor-proclean-grey:  #837f7f; 
+    --cor-proclean--lil:  #000000; 
+    --cor-proclean--green-dark: #111D15; 
     /*O root é um seletor que se baseia na raiz do projeto, é como se colocasse uma formatação que pode ser usada para todo o css
     no nosso caso, vamos criar variável para utilizar cores que podem ser aplicadas em mais de um elemento.
     */
