--- a/css/style.css
+++ b/css/style.css
@@ -163,13 +163,63 @@ h1{
 
 .main-buttons > a {
     display: block;
+    /* white-space: nowrap;  */
 }
 
-.main-buttons{
+.main-buttons {
+  
     display: flex;
     justify-content: space-between;
-    width: 40%;
+    width: 42%;
 }
+
+
+.btn-opc{
+    border: 2px black solid; 
+    color: var(--cor-proclean-white);
+    padding: 12px 24px;
+    border-radius: 5px; 
+    cursor: pointer;
+    font-size: 1rem;
+    font-family: playfair;
+    color: #000000;
+    width: 186px;
+    height: auto; 
+    text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Trabalhando com position
 .screen{
     background-color: rgba(0, 0, 0, 0.7);  */
