--- a/css/style.css
+++ b/css/style.css
@@ -245,10 +245,62 @@ h1{
 }
 
 .card-section img{
-    width: 80%;
+    width: 70%;
+    /* margin: auto; */
+}
+
+.section-main-text{
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+
+}
+.titulo-principal{
+    width: 50%;
     margin: auto;
 }
 
-.card-body{
-    padding-left: 50px ;
+.titulo-principal h2{
+    font-family: playfair;
+    width: 60%;
+    font-size: 2.1rem;
 }
+
+.texto-principal > p:last-of-type{
+    font-family: playfair;
+    width: 64%;
+}
+
+.texto-principal > p:first-child{
+    font-family: playfair;
+    font-weight: 600;
+
+}
+
+.group > a{
+    display: block;
+}
+
+.group{
+    display: flex;
+}
+
+.main-intro{
+    padding-top: 150px ;
+    display: flex;
+    justify-content: space-around;
+    width: 90%;
+    margin: auto;
+}
+
+.titulo-intro > h2{
+    font-family: playfair;
+    width: 79%;
+}
+
+.texto-intro{
+    font-family: playfair;
+    width: 23%;
+}
+
+
